--- a/js/src/playground-app/playground-app.html
+++ b/js/src/playground-app/playground-app.html
@@ -12,6 +12,6 @@
 </dom-if>
 <dom-if if=[[isLoggedIn]]>
   <template>
-    Benvenuto [[userInfo.displayName]] !! <paper-button on-click='onLogout'>Logout</paper-button>
+    Benvenuto [[userInfo.displayName]] !! <paper-button on-click='onLogout' raised>Logout</paper-button>
   </template>
 </dom-if>
