--- a/js/src/playground-app/playground-app.html
+++ b/js/src/playground-app/playground-app.html
@@ -5,13 +5,22 @@
   }
 </style>
 <h2>Security playground</h2>
-<dom-if if=[[!isLoggedIn]]>
-  <template>
-    <bad-login on-login-result='loggedIn'></bad-login>
-  </template>
-</dom-if>
-<dom-if if=[[isLoggedIn]]>
-  <template>
-    Benvenuto [[userInfo.displayName]] !! <paper-button on-click='onLogout' raised>Logout</paper-button>
-  </template>
-</dom-if>
+<paper-tabs selected='{{pageSelected}}'>
+  <paper-tab>Bad Login 1</paper-tab>
+  <paper-tab>Bad Login 2</paper-tab>
+  <paper-tab>Login Ok</paper-tab>
+</paper-tabs>
+<iron-pages selected='[[pageSelected]]'>
+  <div>
+    <dom-if if=[[!isLoggedIn]]>
+      <template>
+        <bad-login on-login-result='loggedIn'></bad-login>
+      </template>
+    </dom-if>
+    <dom-if if=[[isLoggedIn]]>
+      <template>
+        Benvenuto [[userInfo.displayName]] !! <paper-button on-click='onLogout' raised>Logout</paper-button>
+      </template>
+    </dom-if>
+  </div>
+</iron-pages>
