--- a/js/src/playground-app/playground-app.html
+++ b/js/src/playground-app/playground-app.html
@@ -3,6 +3,10 @@
     display: block;
     font-family: Roboto;
   }
+
+  * {
+    --paper-tabs-selection-bar-color: darkgreen;
+  }
 </style>
 <h2>Security playground</h2>
 <paper-tabs selected='{{pageSelected}}'>
