--- a/js/src/playground-app/playground-app.html
+++ b/js/src/playground-app/playground-app.html
@@ -45,7 +45,7 @@
         <p>Puoi farlo così:
             <ol>
                 <li>Apri la console</li>
-                <li>Scrivi: <pre>document.cookies='isAuthenticated=true'</pre></li>
+                <li>Scrivi: <pre>document.cookie='isAuthenticated=true'</pre></li>
                 
             </ol>
         </p>
